# grid-pro

./: .clasp.json  .claspignore  .gitignore
.github/workflows/: release.yml
Doc/: 01-project-overview.md  02-file-structure.md  03-gas-to-sveltekit-migration.md  04-refactoring-progress.md  05-dev-guide.md  06-stock-management.md  07-stripe-integration.md  08-landing-and-saas.md
app/: .env.example  package-lock.json  package.json  test-pdf-alignment.html
app/src/: app.css  app.html  service-worker.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/static/: _headers  _redirects  clear-sw.html  manifest.json
gas/: .clasp.json  .claspignore  Api.gs  Auth.gs  Config.gs  Context.gs  CsvService.gs  DocumentService.gs  EventService.gs  FileService.gs  KpiService.gs  Main.gs  MasterService.gs  Repo.gs  SequenceService.gs  SettingsService.gs  Test.gs  Utils.gs  app.css  app.js.bak  app_css.html  app_js.html  appsscript.json  index.html  js_company.html  js_config.html  js_dashboard.html  js_dbconfig.html  js_dochistory.html  js_document.html  js_init.html  js_master.html  js_payments.html  js_preview.html  js_state.html  js_utils.html  js_whatsnew.html  test_badge.mjs
marketing/: .env.example  package-lock.json  package.json
marketing/src/: app.css  app.html
marketing/static/: sw.js  (+2 more)
scripts/: release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
worker/: package-lock.json  package.json  wrangler.toml
workers/: package-lock.json  package.json  wrangler.jsonc
(+136 files in other folders)
