[package]
name = "grid-pro"
version = "0.1.0"
description = "Grid Pro - ระบบออกเอกสารธุรกิจ"
authors = ["Grid Pro"]
edition = "2021"

[lib]
name = "grid_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
