[package]
name = "grid-pro"
version = "0.1.0"
description = "Grid Pro - โปรแกรมออกเอกสาร"
authors = ["Grid Pro"]
edition = "2021"

[lib]
name = "grid_pro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
